<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="customer"
            type="com.example.obidi.eco_shopping_mall.models.Customer" />
    </data>
    <ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="0dp"
    android:paddingStart="16dp"
    android:paddingEnd="16dp"
    android:background="@color/white"
    android:scrollbars="none">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/customer_photo"
            android:layout_width="@dimen/list_item_image_width"
            android:layout_height="@dimen/list_item_image_height"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:background="@drawable/profile_image"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choose_gender"/>
            <RadioGroup
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/male"/>
                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/female"/>
            </RadioGroup>
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mobile_number"/>
        <EditText
            android:id="@+id/phone_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{customer.phone}'/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shipping_address"/>
        <EditText
            android:id="@+id/address_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{customer.street}'/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/city"/>
        <EditText
            android:id="@+id/city_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{customer.city}'/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/state"/>
        <EditText
            android:id="@+id/state_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text='@{customer.state}'/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:textStyle="bold"
            android:textColor="@color/light_black"
            android:textSize="18sp"
            android:text="@string/change_password"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/old_password"/>
            <EditText
                android:id="@+id/old_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/new_password"/>
            <EditText
                android:id="@+id/new_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/confirm_password_hint"/>
            <EditText
                android:id="@+id/confirm_password_edit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <Button
            android:id="@+id/update_profile_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:paddingStart="50dp"
            android:paddingEnd="50dp"
            android:text="@string/update_profile"
            android:textColor="#fff"
            android:background="@color/colorPrimaryDark"/>
    </LinearLayout>
</ScrollView>
</layout>