<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v4.widget.NestedScrollView
        android:id="@+id/non_empty_cart_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="visible">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.CardView
                android:id="@+id/cardview_1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:cardCornerRadius="0dp"
                app:cardElevation="2dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/cart_recycler_view"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/total"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cardview_1"/>

            <TextView
                android:id="@+id/total_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                tools:text="$300.00"
                app:layout_constraintBottom_toBottomOf="@+id/textView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/textView2"/>

            <Button
                android:id="@+id/proceed_to_payment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:background="@color/colorPrimary"
                android:paddingEnd="10dp"
                android:paddingStart="10dp"
                android:text="@string/place_order"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <!--Only Show When Cart is empty-->
    <LinearLayout
        android:id="@+id/empty_cart_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone">

        <ImageView
            android:id="@+id/empty_cart_image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/shopping_cart"/>

        <TextView
            android:id="@+id/empty_cart_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:text="@string/empty_cart"
            android:textSize="24sp"
            />

        <Button
            android:id="@+id/empty_cart_action_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:text="@string/shop_now"
            android:textColor="@color/white"/>
    </LinearLayout>

</LinearLayout>